--- a/templates/Debian/bridge_entry.j2
+++ b/templates/Debian/bridge_entry.j2
@@ -8,7 +8,11 @@ iface {{ item.name }} inet static
 
 {% if item.gateway is defined %}    gateway {{item.gateway}}{% endif %}
 
-{% if item.bridge_ports is defined %}    bridge_ports {{item.bridge_ports}}{% endif %}
+#{% if item.bridge_ports is defined %}    bridge_ports {{item.bridge_ports}}{% endif %}
+
+{% if item.bridge_ports is defined %}    bridge_ports {% for bridge_port in item.bridge_ports %}{{bridge_port}} {% endfor %}{% endif %}
+
+{% if item.bridge_ports is not defined or item.bridge_ports | length < 1 %}    pre-up brctl addbr {{ item.name }}{% endif %}
 
 {% if item.dns is defined %}    dns-nameservers : {% for dns in item.dns %}{{dns}} {% endfor %}{% endif %}
 
